Feat: nxing service, and load pressure test

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start:load-pressure-test": "node dist/scripts/load-pressure.js",
     "start:emit-transaction": "npm run build && node dist/main-emit-transaction-event.js",
     "start:create-transaction": "npm run build && node dist/main-create-transaction-db.js",
     "start:fraud-validator": "npm run build && node dist/main-fraud-validation-event.js",
@@ -29,9 +29,11 @@
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.13.0",
+    "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "kafkajs": "^2.2.4",
+    "p-limit": "^6.2.0",
     "prisma-lib": "file:../libs/prisma/primsa.service",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
