--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,6 @@ services:
     ports:
       - "9092:9092"
 
-
   redpanda-console:
     image: docker.redpanda.com/redpandadata/console:v3.1.3
     depends_on:
@@ -89,9 +88,19 @@ services:
       KAFKA_BROKERS: kafka:29092
     command: ["npm", "run", "start:emit-transaction"]
     working_dir: /app
-    ports:
-      - "3000:3000"
+    deploy:
+      replicas: 3
+    expose:
+      - "3000"
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "3000:80"
+    depends_on:
+      - emit-transaction
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
 
   create-transaction:
     build:
